# facebook-scraper

./: .gitignore  README.md  boundboxes.py  create_state.py  easy_ocr.py  image_alignment.py  main.py  ocr.py  pyproject.toml  rerun_ocr.py  run_ocr.py  schemas.py  scraper.py  test_selectors.py
facebook_scraper/: __init__.py  boundboxes.py  content_parser.py  easy_ocr.py  facebook_processing.py  image_alignment.py  image_processing.py  ocr.py  paddle_ocr.py  tesseract_ocr.py
scraper/: __init__.py  browser.py  facebook.py
