[project]
name = "facebook-scraper"
version = "0.1.0"
description = "Facebook scraper using Playwright for human-like browsing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.40.0",
    "asyncio",
    "easyocr>=1.7.2",
    "pydantic>=2.12.4",
    "dspy>=3.0.4",
    "pytesseract>=0.3.13",
    "paddlepaddle>=3.2.2",
    "paddleocr>=3.3.2",
]
